tests/snapshots/lexer__lex_bools.snap
---
source: tests/lexer.rs
description: true false
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Boolean("true") at Location { line: 0, col: 0 },
    Boolean("false") at Location { line: 0, col: 5 },
]
