tests/snapshots/lexer__lex_get_url.snap
---
source: lexer/tests/lexer.rs
description: "get http://localhost"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    Get("get") at Location { line: 0, col: 0 },
    Url("http://localhost") at Location { line: 0, col: 4 },
]
