tests/snapshots/lexer__lex_get_url_over_many_lines.snap
---
source: tests/lexer.rs
description: "get\nhttp://localhost"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Get("get") at Location { line: 0, col: 0 },
    Url("http://localhost") at Location { line: 1, col: 0 },
]
