tests/snapshots/lexer__lex_string_literals-2.snap
---
source: tests/lexer.rs
description: "\"hello"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    UnfinishedStringLiteral("\"hello") at Location { line: 0, col: 0 },
]
