tests/snapshots/lexer__lex_string_literals-3.snap
---
source: tests/lexer.rs
description: "\n\"hello\n\"world\n"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    UnfinishedStringLiteral("\n\"hello") at Location { line: 1, col: 0 },
    UnfinishedStringLiteral("\n\"hello\n\"world") at Location { line: 2, col: 0 },
]
