tests/snapshots/lexer__lex_string_literals-4.snap
---
source: tests/lexer.rs
description: " \"\" \"\" ``"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    StringLiteral("") at Position { value: 1, line: 0, col: 1 },
    StringLiteral("") at Position { value: 4, line: 0, col: 4 },
    StringLiteral("") at Position { value: 7, line: 0, col: 7 },
]
