tests/snapshots/lexer__lex_string_literals-5.snap
---
source: tests/lexer.rs
description: " { \"Bearer token\" } "
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    LBracket("{") at Position { value: 1, line: 0, col: 1 },
    StringLiteral("\"Bearer token\"") at Position { value: 3, line: 0, col: 3 },
    RBracket("}") at Position { value: 18, line: 0, col: 18 },
]
