tests/snapshots/lexer__lex_string_literals.snap
---
source: tests/lexer.rs
description: "\"hello\""
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    StringLiteral("\"hello\"") at Position { value: 0, line: 0, col: 0 },
]
